crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__render_filings_table.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Recent Filings (3)────────────────────────────────────────────────────────────────────────────────┐"
"│   Committee                                Form   Report               Filing ID  Age            │"
"│   ACTBLUE - Form F3X                       F3X    M2                   1234567    -              │"
"│>> BIDEN FOR PRESIDENT - Form F3P           F3P    Q1                   1234568    -              │"
"│   DSCC - Form F3X                          F3X    YE                   1234569    -              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
