crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__render_filings_table_empty.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Recent Filings (loading...)───────────────────────────────────────────────────────────────────────┐"
"│Committee                                   Form   Report               Filing ID  Age            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
