crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__render_filters.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"Filters: Preset: Monthly │ Form: F3X │ Committee: C00401224 │ Party: DEM        "
"                                                                                "
"                                                                                "
