crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__render_footer_normal.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"────────────────────────────────────────────────────────────────────────────────"
"Next refresh: M:SS  │  q quit  r refresh  ↑↓/gg/G nav  Enter open  y copy  / sea"
"                    https://efilingapps.fec.gov/rss/generate                    "
"                                                                                "
