crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__render_footer_with_exports.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"────────────────────────────────────────────────────────────────────────────────"
"⟳ Exporting 2/7  │  Next refresh: M:SS  │  q quit  r refresh  ↑↓/gg/G nav  Enter"
"                    https://efilingapps.fec.gov/rss/generate                    "
"                                                                                "
