crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__ui_narrow_terminal.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌FEC RSS Feed──────────────────────────────────────────────┐"
"│FEC Electronic Filing RSS Feed  Data: 0 seconds ago       │"
"└──────────────────────────────────────────────────────────┘"
"┌Recent Filings (3)────────────────────────────────────────┐"
"│   Committee                                For Rep Fi Age│"
"│>> ACTBLUE - Form F3X                       F3X M2  12 -  │"
"│   BIDEN FOR PRESIDENT - Form F3P           F3P Q1  12 -  │"
"│   DSCC - Form F3X                          F3X YE  12 -  │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────"
"Next refresh: M:SS  │  q quit  r refresh  ↑↓/gg/G nav  Enter"
"          https://efilingapps.fec.gov/rss/generate          "
